--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
-  "name": "chatbot-ui",
-  "version": "2.0.0",
-  "private": true,
+  "name": "pi-terminal-ai",
+  "version": "1.0.0",
+  "description": "The world's first smart Linux-terminal–aware chat system with JSON command cards, Run buttons, and continuous terminal analysis.",
+  "private": false,
+  "keywords": ["ai", "terminal", "chat", "linux", "automation", "commands", "nextjs", "typescript"],
+  "author": {
+    "name": "Sukesh Periyasamy",
+    "email": "sukesh.periyasamy@example.com",
+    "url": "https://github.com/Sukesh-Periyasamy"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sukesh-Periyasamy/PiTerminal-AI.git"
+  },
+  "homepage": "https://github.com/Sukesh-Periyasamy/PiTerminal-AI#readme",
+  "bugs": {
+    "url": "https://github.com/Sukesh-Periyasamy/PiTerminal-AI/issues"
+  },
+  "license": "MIT",
   "scripts": {
     "chat": "supabase start && npm run db-types && npm run dev",
     "restart": "supabase stop && npm run chat",
